1/1.9/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-pingpong-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: main-pingpong-svc
              servicePort: 2345
          - path: /pingpong
            backend:
              serviceName: main-pingpong-svc
              servicePort: 2345
